Feature/braiins graphql legacy support (#3)
Co-authored-by: Verdox <mail.ysp@web.de>